--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Django~=4.2.3
 opencv-python~=4.8.0.74
 pdf2image~=1.16.3
 Pillow~=10.0.0
@@ -6,3 +5,5 @@ pyexcel~=0.7.0
 PyMuPDF~=1.22.5
 PyPDF2~=3.0.1
 pytesseract~=0.3.10
+python-dotenv==1.0.1
+unidecode==1.3.8
