fix: pdf-reader env url

--- a/static/hemeroteca/js/pdf-reader/.env
+++ b/static/hemeroteca/js/pdf-reader/.env
@@ -1,2 +1,2 @@
-REACT_APP_SITE_URL="http://hemeroteca.lavalldevidre.cat/hemeroteca/"
+REACT_APP_SITE_URL="https://hemeroteca.lavalldevidre.cat/hemeroteca/"
 REACT_APP_API_URL="api/"
